--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "mongoose": "^5.10.2",
     "mongoose-timezone": "^1.3.0",
     "morgan": "^1.10.0",
+    "mqtt": "^4.2.6",
     "node-unifi": "^1.4.0",
     "pm2": "^4.5.6",
     "socket.io": "^2.3.0"
