--- a/package.json
+++ b/package.json
@@ -31,9 +31,9 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
-    "caniuse-lite": "^1.0.30001301",
     "cors": "^2.8.5",
-    "dotenv": "^8.2.0",
+    "csv-parser": "^3.0.0",
+    "dotenv": "^8.6.0",
     "express": "^4.17.1",
     "helmet": "^4.1.0",
     "jsonwebtoken": "^8.5.1",
@@ -43,6 +43,7 @@
     "mqtt": "^4.2.6",
     "node-unifi": "^1.4.0",
     "pm2": "^4.5.6",
-    "socket.io": "^2.3.0"
+    "socket.io": "^2.4.1",
+    "wialon": "^2.0.2"
   }
 }
